layout issue solved

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ body {
 main {
   flex: 1;
   max-width: 1280px;
-  margin-inline: auto;
+  /* margin:0 auto; */
 }
 
 .spbtn {
